<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="@dimen/_2mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Calculation-->
        <TextView
            android:id="@+id/txtCalculation"
            style="@style/CalculationStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:maxLines="2"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:textAlignment="textEnd"
            tools:text="0" />

    </androidx.core.widget.NestedScrollView>

    <!--Show Result-->
    <TextView
        android:id="@+id/txtResult"
        style="@style/ResultStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <!--History and Back-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consHistory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40mdp"
        style="@style/ConstraintIconsBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult">
        <!--btn history-->
        <ImageView
            android:id="@+id/btnHistory"
            style="@style/IconImage"
            android:src="@drawable/history_line_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--btn back-->
        <ImageView
            android:id="@+id/btnBackSpace"
            style="@style/IconImage"
            android:contentDescription="@string/app_name"
            android:src="@drawable/backspace_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--btn rotation-->
        <ImageView
            android:id="@+id/btnRotation"
            style="@style/IconImage"
            android:src="@drawable/mobile_rotate_rotation_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnHistory" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <!--Cons Lay Buttons-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ConstraintBg"
        android:layout_marginTop="@dimen/mines10mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consHistory">

        <!--Cons Digits-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayDigits"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnEqual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!--Table-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_5mdp"
                android:weightSum="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--Row 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAc"
                        style="@style/DigitButton"
                        android:text="@string/ac"
                        android:textColor="@color/pink" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOpenBracket"
                        style="@style/DigitButton"
                        android:text="@string/OpenBracket" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCloseBracket"
                        style="@style/DigitButton"
                        android:text="@string/CloseBracket" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPercent"
                        style="@style/DigitButton"
                        android:text="@string/percent"
                        android:textColor="@color/yellow" />

                </LinearLayout>

                <!--Row 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn7"
                        style="@style/DigitButton"
                        android:text="@string/_7" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn8"
                        style="@style/DigitButton"
                        android:text="@string/_8" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn9"
                        style="@style/DigitButton"
                        android:text="@string/_9" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDivide"
                        style="@style/OperatorButton"
                        android:text="@string/divide" />

                </LinearLayout>
                <!--Row 3-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn4"
                        style="@style/DigitButton"
                        android:text="@string/_4" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn5"
                        style="@style/DigitButton"
                        android:text="@string/_5" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn6"
                        style="@style/DigitButton"
                        android:text="@string/_6" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnMultiply"
                        style="@style/OperatorButton"
                        android:text="@string/multiply" />

                </LinearLayout>

                <!--Row 4-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn1"
                        style="@style/DigitButton"
                        android:text="@string/_1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn2"
                        style="@style/DigitButton"
                        android:text="@string/_2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn3"
                        style="@style/DigitButton"
                        android:text="@string/_3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPlus"
                        style="@style/OperatorButton"
                        android:text="@string/sum" />

                </LinearLayout>

                <!--Row 5-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPNSign"
                        style="@style/DigitButton"
                        android:text="@string/pnSign"
                        android:textColor="@color/yellow" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn0"
                        style="@style/DigitButton"
                        android:text="@string/_0" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDot"
                        style="@style/DigitButton"
                        android:text="@string/dot" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSubtract"
                        style="@style/OperatorButton"
                        android:text="@string/subtract" />
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Row 6-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12mdp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/equal"
            android:textSize="@dimen/_18font_mdp"
            app:backgroundTint="@color/yellow"
            app:cornerRadius="@dimen/_20mdp"
            app:layout_constraintBottom_toBottomOf="@+id/consButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>